Fixed spacing

--- a/style.css
+++ b/style.css
@@ -135,9 +135,16 @@ a.active {
   cursor: pointer;
   transition: background-color 0.5s ease, color 0.5s ease;
   display: block;
-  width: fit-content; /* Adjusts width to content */
+  max-width: fit-content; /* Adjusts width to content */
   margin: 0 auto; /* Centers the button */
 }
+
+@media (max-width: 400px) { /* Bootstrap's breakpoint for phones */
+  .btn.btn-primary.btn-lg {
+    max-width: 200px;
+  }
+}
+
 
 .btn.btn-primary.btn-lg:hover {
   background-color: var(--main-color) !important;
